@@ -19,9 +19,13 @@ class ActivityObserver < ActiveRecord::Observer
   observe Account, Campaign, Contact, Lead, Opportunity, Task
   @@tasks = {}
   @@leads = {}
+  @@opportunities = {}
 
   def after_create(subject)
     log_activity(subject, :created)
+    if subject.is_a?(Opportunity) && subject.campaign && subject.stage == "won"
+      update_campaign_revenue(subject.campaign, subject.amount - subject.discount)
+    end
   end
 
   def before_update(subject)
@@ -29,6 +33,8 @@ class ActivityObserver < ActiveRecord::Observer
       @@tasks[subject.id] = Task.find(subject.id).freeze
     elsif subject.is_a?(Lead)
       @@leads[subject.id] = Lead.find(subject.id).freeze
+    elsif subject.is_a?(Opportunity)
+      @@opportunities[subject.id] = Opportunity.find(subject.id).freeze
     end
   end
 
@@ -45,6 +51,16 @@ class ActivityObserver < ActiveRecord::Observer
       if original && original.status != "rejected" && subject.status == "rejected"
         return log_activity(subject, :rejected)
       end
+    elsif subject.is_a?(Opportunity)
+      original = @@opportunities.delete(subject.id)
+      if original
+        if original.stage != "won" && subject.stage == "won"    # :other to :won -- add to total campaign revenue.
+          update_campaign_revenue(subject.campaign, (subject.amount || 0) - (subject.discount || 0))
+          return log_activity(subject, :won)
+        elsif original.stage == "won" && subject.stage != "won" # :won to :other -- substract from total campaign revenue.
+          update_campaign_revenue(original.campaign, -((original.amount || 0) - (original.discount || 0)))
+        end
+      end
     end
     log_activity(subject, :updated)
   end
@@ -58,4 +74,9 @@ class ActivityObserver < ActiveRecord::Observer
     current_user = User.current_user
     Activity.log(current_user, subject, action) if current_user
   end
+
+  def update_campaign_revenue(campaign, revenue)
+    campaign.update_attribute(:revenue, campaign.revenue + revenue) if campaign
+  end
+
 end
