@@ -4,6 +4,14 @@ It does not matter how slowly you go as long as you do not stop.
 First they ignore you, then they laugh at you, then they fight you,
 then you win. –- Mahatma Gandhi
 
+Fri, Nov 6, 2009
+---------------------------------------------------------------------
+- Adjust total campaign revenue when related opportunity is won (LH #121).
+
+Thu, Nov 5, 2009
+---------------------------------------------------------------------
+- Writing specs for LH #121.
+
 Wed, Nov 4, 2009
 ---------------------------------------------------------------------
 - Correctly set opportunity campaign and source when converting a lead (LH #119).
